adding bin/www back

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
+    "debug": "^2.6.9",
     "ejs": "^2.5.8",
     "express": "~4.15.2",
+    "http": "0.0.0",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
