--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^2.0.0",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "^2.6.9",
@@ -13,7 +14,10 @@
     "express": "~4.15.2",
     "http": "0.0.0",
     "jade": "~1.11.0",
+    "mkdirp": "^0.5.1",
     "morgan": "~1.8.1",
+    "mysql": "^2.15.0",
+    "path": "^0.12.7",
     "serve-favicon": "~2.4.2"
   }
 }
