--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "debug": "^2.6.9",
     "ejs": "^2.5.8",
     "express": "~4.15.2",
+    "fs": "0.0.1-security",
     "http": "0.0.0",
     "jade": "~1.11.0",
     "mkdirp": "^0.5.1",
     "morgan": "~1.8.1",
     "mysql": "^2.15.0",
+    "nodemon": "^1.17.3",
     "path": "^0.12.7",
     "serve-favicon": "~2.4.2"
   }
