--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# File system metadata directories
+.DS_Store
+public/.DS_Store
+
 # Runtime data
 pids
 *.pid
