updated comment style

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "jade": "~1.11.0",
+    "localStorage": "^1.0.3",
     "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
+    "mongoose": "^5.0.17",
     "morgan": "~1.8.1",
     "mysql": "^2.15.0",
     "nodemon": "^1.17.3",
