--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "test": "mocha"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^2.0.0",
     "body-parser": "~1.17.1",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "cookie-parser": "~1.4.3",
+    "crypto-js": "^3.1.9-1",
     "debug": "^2.6.9",
     "ejs": "^2.5.8",
+    "elliptic": "^6.4.0",
     "express": "~4.15.2",
     "express-fileupload": "^0.4.0",
     "fs": "0.0.1-security",
@@ -28,6 +31,8 @@
     "nodemon": "^1.17.3",
     "path": "^0.12.7",
     "serve-favicon": "~2.4.2",
-    "time-stamp": "^2.0.0"
+    "time-stamp": "^2.0.0",
+    "uuid": "^3.2.1",
+    "ws": "^5.1.1"
   }
 }
